# linguaggio_c_universita

./: LICENSE.txt  README.md
CMake/: CMakeLists.txt  TestP.cpp  main.c  max.c  max.h
Discriminante/: Discriminante.sln
EliminaSpazi_In_Fi/: EliminaSpazi_In_Fi.c  EliminaSpazi_In_Fi.h  EliminaSpazi_In_Fi.slnx  EliminaSpazi_In_Fi.vcxproj  EliminaSpazi_In_Fi.vcxproj.filters
Esponenziali/: Esponenziali.sln
Fattoriale/: Fattoriale.sln
Inverti_Cifre/: Inverti_Cifre.sln
LeggiFileCitta/: 1LeggiFileCitta.h  LbberiaLeggiCitta.h  LeggiFileCitta.c  LeggiFileCitta.h  LeggiFileCitta.slnx  ProvaFile.vcxproj  ProvaFile.vcxproj.filters  citta.txt  main.c
Lungezza_Stringa/: Lungezza_Stringa.c  Lungezza_Stringa.h  Lungezza_Stringa.slnx  Lungezza_Stringa.vcxproj  Lungezza_Stringa.vcxproj.filters
Massimo/: Massimo.sln
Multipli/: Multipli.sln
Numeri_Cresenti/: Numeri_Cresenti.sln
Numeri_Felici/: Numeri_Felici.sln
Numero_Primo/: Numero_Primo.sln
Ordine_di_grandezza/: Ordine_di_grandezza.sln
Problema_Esempio/: Problema_Esempio.sln
Prossimo_Numero_Primo/: Prossimo_Numero_Primo.sln
ProvaM/: ProvaM.slnx  ProvaM.vcxproj  main.c
Prova_File/: Prova_File.slnx  Prova_File.vcxproj  main.c
Quadrato_della_distanza/: Quadrato_della_distanza.sln
Select_Sort/: Select_Sort.sln
Seno/: Seno.sln
Somma_Cifre/: Somma_Cifre.sln
Somma_Vettori/: Somma_Vettori.sln
Terna_Pitagorica/: Terna_Pitagorica.sln
Test/: Test.vcxproj  test.cpp
Test_Elimina_spazi/: Test_Elimina_spazi.vcxproj  test.cpp
binario_BCD/: binario_BCD.sln
cifre binarie/: cifre binarie.sln
(+113 files in other folders)
